add files to js practice 05

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>JavaScript Objects</h1>
+    <h1>JavaScript Practice</h1>
     <h2>hello</h2>
 
 
